* send startup telegram message to admin users

--- a/config/conf.yml.example
+++ b/config/conf.yml.example
@@ -2,3 +2,5 @@ bot_token: <telegram bot token>
 ics_path: <path to ics file>
 db_path: <path to desired db file>
 flush_interval: <interval in seconds>
+admin_users:
+  - <telegram user id, copy line for multiple users>
