--- a/config/conf.yml.example
+++ b/config/conf.yml.example
@@ -1,5 +1,7 @@
 bot_token: <telegram bot token>
-db_path: <path to desired db file>
 flush_interval: <interval in seconds>
 admin_users:
   - <telegram user id, copy this line if you want multiple users>
+persistence: sqlite
+sqlite:
+  db_path: <path to desired db file>
