--- a/docker/database/Dockerfile
+++ b/docker/database/Dockerfile
@@ -1,4 +1,3 @@
 FROM amacneil/dbmate
 VOLUME /db
-ENV DATABASE_URL=sqlite:////db/dev.db
-CMD [ "--migrations-dir", "/db/migrations", "up" ]
+CMD [ "--migrations-dir", "/db/migrations/mysql", "up" ]
