WIP: Dockerfile for rubocop

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   app:
     build: ./docker/app/
+    restart: always
     volumes:
       - .:/app:rw
       - ./assets:/assets:ro
@@ -24,8 +25,6 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: example
-    networks:
-      - test
     networks:
       - frontend
       - backend
