--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,9 @@ services:
       - ./log:/log:rw
     networks:
       - frontend
+    ports:
+      - 1234:1234
+      - 26162:26162
     environment:
       - ICSBOT_ENV=testing
   migrations:
