--- a/docker/rspec/Dockerfile
+++ b/docker/rspec/Dockerfile
@@ -1,6 +1,9 @@
-FROM ruby:2.4.4-alpine3.7
-RUN apk update && apk add -v ruby-dev build-base sqlite-dev mysql-dev
+FROM ruby:2.4.4-alpine3.7 
 VOLUME /app
-ENV ICSBOT_ENV=testing
 WORKDIR /app
-CMD bundle install --without=development && rspec
+COPY Gemfile /app
+RUN apk update && \
+    apk add -v ruby-dev build-base sqlite-dev mysql-dev && \
+    bundle install --without=development
+ENV ICSBOT_ENV=testing
+ENTRYPOINT ["rspec"]
