Remove root folder dockerfile, fix app dockerfile

--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -1,3 +1,4 @@
+ARG DEBUGGER_PORT
 FROM ruby:2.4.4-alpine3.7
 COPY ./Gemfile .
 RUN apk update && \
@@ -11,4 +12,5 @@ VOLUME /log
 
 EXPOSE $DEBUGGER_PORT
 EXPOSE 26162
-ENTRYPOINT [ "rdebug-ide", "--host", "0.0.0.0", "--port", "$DEBUGGER_PORT", "--dispatcher-port", "26162", "--" ]
+ENTRYPOINT [ "rdebug-ide", "--host", "0.0.0.0", "--port", "1234", "--dispatcher-port", "26162", "--" ]
+CMD [ "/app/bin/server", "--main=MainThread" ]
