--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '3'
 services:
   app:
-    build: .
+    build:
+      context: .
+      dockerfile: ./docker/app/Dockerfile
     restart: always
     env_file:
       - ./docker/app/docker.env
@@ -15,17 +17,6 @@ services:
     ports:
       - 1234:1234
       - 26162:26162
-    environment:
-      - ICSBOT_ENV=testing
-  migrations:
-    build: ./docker/migrations/
-    volumes:
-      - ./db:/db:rw
-    restart: on-failure
-    env_file:
-      - ./docker/migrations/docker.env
-    networks:
-      - backend
   mysql:
     image: mysql:8.0
     command: --default-authentication-plugin=mysql_native_password
