--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
 version: '3'
 services:
-  muell-devel:
+  devel:
     build:
       context: .
       dockerfile: ./docker/app-devel/Dockerfile
     restart: always
+    depends_on:
+      - "mysql"
     env_file:
       - ./docker/app-devel/docker.env
     volumes:
