--- a/docker/app-devel/Dockerfile
+++ b/docker/app-devel/Dockerfile
@@ -1,7 +1,10 @@
-ARG DEBUGGER_PORT
-FROM muell:latest
-COPY ./Gemfile .
-RUN bundle install --with=development
+FROM ruby:2.4.4-alpine3.7
+
+COPY ./Gemfile ./Gemfile.lock ./
+
+RUN apk update && \
+    apk add -v --no-cache ruby-dev build-base sqlite-dev mysql-dev && \
+    bundle install --without="testing"
 
 WORKDIR /app/
 VOLUME /app
@@ -9,7 +12,7 @@ VOLUME /assets
 VOLUME /log
 VOLUME /config
 
-EXPOSE $DEBUGGER_PORT
+EXPOSE 1234
 EXPOSE 26162
 ENTRYPOINT [ "rdebug-ide", "--host", "0.0.0.0", "--port", "1234", "--dispatcher-port", "26162", "--" ]
 CMD [ "/app/bin/server", "--main=MainThread" ]
