Move ICSBOT_ENV into prod image

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -51,4 +51,5 @@ LABEL net.benjaminsattler.icsbot.git_url=$GIT_REPO
 LABEL net.benjaminsattler.icsbot.build_time=$BUILD_TIME
 LABEL net.benjaminsattler.icsbot.build_user=$BUILD_USER
 
+ENV ICSBOT_ENV production
 CMD [ "/app/bin/server", "--main=MainThread" , "--log=/log/icsbot.log"]
