Add hyper.sh integration

--- a/config/conf.yml.example
+++ b/config/conf.yml.example
@@ -1,7 +1,6 @@
 bot_token: <telegram bot token>
 flush_interval: <interval in seconds>
-admin_users:
-  - <telegram user id, copy this line if you want multiple users>
+admin_users: <telegram user ids, separated by ':'>
 persistence: sqlite|mysql
 sqlite:
   db_path: <path to desired db file>
