--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -8,19 +8,28 @@ services:
     environment:
       ENABLE_DEBUG: 0
       ICSBOT_ENV: development
-      MIGRATIONS_DIR: /db/migrations/mysql/
-      DATABASE_URL: mysql://root:example@muell_mysql_1/icstelegrambot
+    env_file:
+      - ./docker/development.env
     volumes:
       - .:/app:rw
       - ./db:/db:ro
       - ./assets:/assets:ro
       - ./log:/log:rw
-      - ./config:/config:ro
     networks:
       - backend
     ports:
       - 1234:1234
       - 26162:26162
   mysql:
+    image: mysql:8.0
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    networks:
+      - backend
+    volumes:
+      - ./db/mysql:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: example
+networks:
+  backend:
+    driver: bridge
