--- a/docker/environment.env.example
+++ b/docker/environment.env.example
@@ -68,3 +68,9 @@ MIGRATIONS_DIR=/db/migrations/mysql/
 # For more information on how this database string needs to look like, please
 # refer to the dbmate manual at https://github.com/amacneil/dbmate
 DATABASE_URL=mysql://root:example@muell_mysql_1/icstelegrambot
+
+# Specify the timezone that the bot should run in. Set this to the timezone
+# in which your users will be. For a list of possible values please consult
+# https://en.wikipedia.org/wiki/List_of_tz_database_time_zones and look for
+# the values in the table column "TZ"
+TIMEZONE=Europe/Berlin
