--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,7 +4,10 @@ services:
     image: benjaminsattler/icstelegrambot
     restart: always
     env_file:
+      # create this file by copying ./docker/environment.env.example
       - ./docker/production.env
     volumes:
+      # volume for ics file storage
       - ./assets:/assets:ro
+      # volume for log files
       - ./log:/log:rw
