update travis config

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,9 +7,10 @@ ARG BUILD_TIME=unknown
 ARG BUILD_USER=unknown
 
 COPY ./Gemfile ./Gemfile.lock ./
-COPY --from=amacneil/dbmate:v1.4.1 /dbmate /usr/local/bin/dbmate
 RUN apk update && \
     apk add -v --no-cache ruby-dev build-base sqlite-dev mysql-dev libc6-compat tzdata && \
+    wget -O /usr/local/bin/dbmate https://github.com/amacneil/dbmate/releases/download/v1.4.1/dbmate-linux-amd64 && \
+    chmod +x /usr/local/bin/dbmate && \
     bundle install --without="development testing"
 ENTRYPOINT [ "/usr/local/bin/dbmate" ]
 ENV ICSBOT_GIT_TAG="$GIT_TAG" \
