update travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: ruby
 services:
   - docker
 before_install:
-  - rake docker:build_all
+  - rake docker:build_testing
 script:
   - rake tests:run_all
