update travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: ruby
 services:
   - docker
-before_install:
-  - rake docker:build_testing
-script:
-  - rake tests:run_all
+install: bundle install --without="development"
+before_script: rspec ./spec/
+script: rake docker:build_prod
