--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ before_script:
 script:
   - rake testing:run_all
 deploy:
-  - rake docker:build_push_prod
-stages:
-  - name: deploy
-    # require the branch name to be master (note for PRs this is the base branch name)
-    if: branch != master
+  provider: script
+  script: rake docker:build_push_prod
+  on:
+    branch: feat/ci_cd
