--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,10 @@ language: ruby
 services:
 - docker
 install: bundle install --without="development"
-before_script: true
-  #- rake docker:build_testing
-script: true
- # - rake tests:run_all
+script: rspec ./spec/
 before_deploy: bash ./scripts/ci/before_deploy.sh
 deploy:
   provider: script
   script: bash ./scripts/ci/deploy.sh
   on:
-    branch: feat/ci_cd
+    branch: master
