--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,8 @@ require: rubocop-rspec
 
 AllCops:
   TargetRubyVersion: 2.3.1
+  Exclude:
+    - 'deployment.rake'
 
 Metrics/PerceivedComplexity:
   Enabled: false
