Fix database migrations for kubernetes development

--- a/k8s/configs/development.env.example
+++ b/k8s/configs/development.env.example
@@ -59,10 +59,14 @@ MIGRATIONS_DIR=/db/migrations/mysql/
 # Specify the database connection string for the mgiration tool "dbmate".
 # This is listed separately for security reasons (migrations need to alter
 # database schemas, and the bot should not have these kinds of permissions).
+# Also note that this environment variable will be used inside a docker
+# container that is not deployed to kubernetes and is attached to the
+# kubernetes node using docker's host network. The MySQL database is available
+# on the kubernetes node on port 31235.
 #
 # For more information on how this database string needs to look like, please
 # refer to the dbmate manual at https://github.com/amacneil/dbmate
-DATABASE_URL=mysql://root:example@mysql-devel/icstelegrambot
+DATABASE_URL=mysql://root:example@host.docker.internal:31235/icstelegrambot
 
 # Specify the timezone that the bot should run in. Set this to the timezone
 # in which your users will be. For a list of possible values please consult
