Update travis build env for k8s deployment

--- a/k8s/configs/development.env.example
+++ b/k8s/configs/development.env.example
@@ -11,6 +11,13 @@
 # You retrieve this by talking to the bot "Botfather"
 BOT_TOKEN=111111111:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
 
+# Set the flag to 1 to enable debugging. This will cause
+# rdebug to be launched inside the pod, which will pause
+# execution until a debugger connects to it. You may connect
+# to the debugger by connecting to port 31234 on the kubernetes
+# node, e.g. localhost:31234
+ENABLE_DEBUG=0
+
 # Defines the intervals at which the in memory data should be
 # written to the database. Higher values mean less database load,
 # lower values mean more protection against data loss
