Make loggers configurable

--- a/k8s/configs/production.env.example
+++ b/k8s/configs/production.env.example
@@ -49,3 +49,25 @@ MIGRATIONS_DIR=/app/db/migrations/mysql/
 # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones and look for
 # the values in the table column "TZ"
 TIMEZONE=Europe/Berlin
+
+# Specify which log engines to use. Separate multiple values with a colon (:)
+# Supported values are
+#
+# GoogleCloudLogger
+# StdoutLogger
+LOGGERS=StdoutLogger:GoogleCloudLogger
+
+# If you choose GoogleCloudLogger, you can configure which
+# google cloud project to associate with logs sent from
+# this project
+GOOGLECLOUDLOGGER_PROJECT=your_google_cloud_project
+
+# If you choose GoogleCloudLogger, you can configure which
+# google cloud logname to associate with logs sent from
+# this project
+GOOGLECLOUDLOGGER_LOGNAME=your_log_name
+
+# If you choose GoogleCloudLogger, you can configure which
+# google cloud resource type to associate with logs sent from
+# this project
+GOOGLECLOUDLOGGER_RESOURCE_TYPE=your_resource_type
