--- a/k8s/development.tpl.yaml
+++ b/k8s/development.tpl.yaml
@@ -101,6 +101,28 @@ spec:
             configMapKeyRef:
               key: TIMEZONE
               name: development-config
+        - name: LOGGERS
+          valueFrom:
+            configMapKeyRef:
+              key: LOGGERS
+              name: development-config
+        - name: GOOGLECLOUDLOGGER_PROJECT
+          valueFrom:
+            configMapKeyRef:
+              key: GOOGLECLOUDLOGGER_PROJECT
+              name: development-config
+        - name: GOOGLECLOUDLOGGER_LOGNAME
+          valueFrom:
+            configMapKeyRef:
+              key: GOOGLECLOUDLOGGER_LOGNAME
+              name: development-config
+        - name: GOOGLECLOUDLOGGER_RESOURCE_TYPE
+          valueFrom:
+            configMapKeyRef:
+              key: GOOGLECLOUDLOGGER_RESOURCE_TYPE
+              name: development-config
+        - name: GOOGLECLOUDLOGGER_ENVIRONMENT
+          value: development
         image: muell_dev
         imagePullPolicy: Never
         name: devel
@@ -138,7 +160,7 @@ apiVersion: "extensions/v1beta1"
 kind: "Deployment"
 metadata:
   creationTimestamp: null
-  name: "mysql-devel"
+  name: "mysql-development"
 spec:
   replicas: 1
   selector:
