Read ics files from aws s3

--- a/docker/configs/development.env.example
+++ b/docker/configs/development.env.example
@@ -97,3 +97,9 @@ GOOGLECLOUDLOGGER_LOGNAME=your_log_name
 # google cloud resource type to associate with logs sent from
 # this project
 GOOGLECLOUDLOGGER_RESOURCE_TYPE=your_resource_type
+#
+# Put the credentials for retrieving ics files from AWS S3
+AWS_REGION=aws-location
+AWS_S3_BUCKET=bucket_name
+AWS_ACCESS_KEY_ID=your_access_key_id
+AWS_SECRET_ACCESS_KEY=your_secret_access_key
